grammar.js
    source_file: ($) => repeat($.top_level_item),

    let: () => "let",
    is: () => "is",
    with: () => "with",
    in: () => "in",
    top_level_item: ($) =>
      choice(
        $.import_declaration,
        $.type_declaration,
        seq(repeat(field("attribute", $.attribute)), $.let_declaration),
        seq(repeat(field("attribute", $.attribute)), $.const_declaration),
        seq(repeat(field("attribute", $.attribute)), $.struct_declaration),
        seq(repeat(field("attribute", $.attribute)), $.interface_declaration),
        seq(repeat(field("attribute", $.attribute)), $.enum_declaration),
        $.function_declaration,
      ),

    enum_declaration: ($) =>
      seq(
        "enum",
        field("name", $.identifier),
        optional(field("type_parameters", $.type_parameter_list)),
        "{",
        optional(commaSep1($.enum_variant)),
        optional(","),
        "}",
        optional(";"),
      ),

    enum_variant: ($) =>
      seq(
        field("name", $.identifier),
        optional(seq(":", field("payload", choice($.type, $.enum_variant_struct_type)))),
      ),

    function_declaration: ($) =>
      seq(
        repeat(field("attribute", $.attribute)),
        optional("unsafe"),
        "fn",
        optional(field("receiver", $.receiver)),
        field("name", $.identifier),
        optional(field("type_parameters", $.type_parameter_list)),
        field("parameters", $.parameter_list),
        optional(seq("->", field("result", $.type))),
        optional(field("return_origins", $.return_origin_clause)),
        choice(field("body", $.block), ";"),
      ),

    type_parameter_list: ($) =>
      seq("<", commaSep1($.type_parameter), optional(","), ">"),

    type_parameter: ($) =>
      seq(field("name", $.identifier), optional(seq(":", $.constraint_term))),

    parameter_list: ($) =>
      seq("(", optional(commaSep1($.parameter)), optional(","), ")"),

    parameter: ($) => $.typed_parameter,

    typed_parameter: ($) =>
      choice(
        seq(
          optional($.comptime),
          optional($.move),
          optional($.mut),
          field("name", $.identifier),
          ":",
          field("type", $.type),
          optional(seq("=", field("default", $.expression))),
        ),
        field("type", $.type),
      ),

    block: ($) => seq("{", repeat($.statement), "}"),

    let_statement: ($) => seq($.let_clause, optional(";")),

    let_clause: ($) =>
      seq(
        $.let,
        optional($.mut),
        field("name", $.identifier),
        optional(seq(":", field("type", $.type))),
        optional(seq("=", field("value", $.expression))),
      ),

    return_statement: ($) =>
      prec.right(
        seq("return", optional(field("value", $.expression)), optional(";")),
      ),

    if_statement: ($) =>
      seq(
        "if",
        field("condition", $.expression),
        field("consequence", $.block),
        optional(
          seq("else", field("alternative", choice($.block, $.if_statement))),
        ),
      ),

    match_statement: ($) =>
      seq("match", field("value", $.expression), "{", repeat($.match_arm), "}"),

    match_arm: ($) =>
      seq(
        field("pattern", $.variant_pattern),
        "=>",
        field("body", $.block),
      ),

    variant_pattern: ($) =>
      seq(
        field("case", $.variant_case),
        optional(
          seq(
            $.with,
            field(
              "payload",
              choice($.variant_pattern_fields, $.identifier, "_"),
            ),
          ),
        ),
      ),

    variant_pattern_fields: ($) =>
      seq(
        "{",
        optional(commaSep1($.variant_pattern_field)),
        optional(","),
        "}",
      ),

    variant_pattern_field: ($) =>
      seq(
        field("name", $.identifier),
        "=",
        choice(field("binding", $.identifier), field("discard", "_")),
      ),

    for_statement: ($) =>
      seq(
        "for",
        optional(
          choice(
            $.for_in_clause,
            field("condition", $.expression),
          ),
        ),
        field("body", $.block),
      ),
    
    for_in_clause: ($) =>
      seq(
        choice(
          field("value", $.identifier),
          seq(
            field("index", $.identifier),
            ",",
            field("value", $.identifier),
          ),
        ),
        $.in,
        field("iterable", $.expression),
      ),

    expression_statement: ($) => seq($.expression, optional(";")),

    struct_literal: ($) =>
      seq(
        optional(field("type", choice($.named_type, $.generic_type))),
        ".",
        "{",
        optional(commaSep1($.named_field_initializer)),
        optional(","),
        "}",
      ),

    variant_literal: ($) =>
      prec.right(
        PREC.catch,
        seq(
          field("case", $.variant_case),
          $.with,
          field("payload", $.expression),
        ),
      ),

    named_field_initializer: ($) =>
      seq(field("name", $.identifier), "=", field("value", $.expression)),

    call_expression: ($) =>
      prec.left(
        PREC.postfix,
        seq(
          field("function", $.expression),
          field("arguments", $.argument_list),
        ),
      ),

    argument_list: ($) =>
      seq("(", optional(commaSep1($.expression)), optional(","), ")"),

    selector_expression: ($) =>
      prec.left(
        PREC.postfix,
        seq(field("value", $.expression), ".", field("field", $.identifier)),
      ),

    is_expression: ($) =>
      prec.left(
        PREC.equality,
        seq(
          field("value", $.expression),
          $.is,
          field("case", $.variant_case),
        ),
      ),

    named_type: ($) => choice($.identifier, $.scoped_identifier),
    generic_type: ($) =>
      seq(
        field("name", choice($.identifier, $.scoped_identifier)),
        field("type_arguments", $.type_argument_list),
      ),

    type_argument_list: ($) =>
      seq("<", optional(commaSep1($.type)), optional(","), ">"),

    str_type: () => "str",
    field_declaration: ($) =>
      seq(
        field("name", $.identifier),
        ":",
        field("type", $.type),
      ),

    scoped_identifier: ($) =>
      prec.left(
        seq(
          field(
            "scope",
            choice($.identifier, $.scoped_identifier, $.generic_type),
          ),
          "::",
          field("name", $.identifier),
        ),
      ),

    variant_case: ($) => field("path", $.scoped_identifier),

    boolean_literal: ($) => choice("true", "false"),
    number_literal: ($) =>
      token(
        choice(HEX_NUMBER, OCT_NUMBER, BIN_NUMBER, DEC_NUMBER, IMAG_NUMBER, FLOAT_NUMBER),
      ),
    identifier: () => /[A-Za-z_][A-Za-z0-9_]*/,
