test/corpus/default_parameters.txt
===================================
Enum case test as parameter default
===================================

fn IsPending(pending: bool = State<i32>::Pending is State<i32>::Pending) -> bool {
    return pending;
}

---

(source_file
  (top_level_item
    (function_declaration
      (identifier)
      (parameter_list
        (parameter
          (typed_parameter
            (identifier)
            (named_type
              (identifier))
            (is_expression
              (scoped_identifier
                (generic_type
                  (identifier)
                  (type_argument_list
                    (named_type
                      (identifier))))
                (identifier))
              (is)
              (variant_case
                (scoped_identifier
                  (generic_type
                    (identifier)
                    (type_argument_list
                      (named_type
                        (identifier))))
                  (identifier)))))))
      (named_type
        (identifier))
      (block
        (return_statement
          (identifier))))))
